<resources>
    <string name="app_name">TeamMadStickingYall</string>
    <string name="titleContacts">Contacts</string>

    <string name="channel_id">Team_mad_sticking_yall</string>

    <string name="sign_in">SignIn / SingUp</string>
    <string name="user_name">Enter your name here</string>
    <string name="usernameHint">Your will auto sign up if you were first time here.</string>
    <string name="emptyNameHint">Please enter your name.</string>
    <string name="userInUseHint">User has already logged in.</string>
    <string name="sent_message_number">Sent sticker number:</string>
    <string name="receiver_s_username">Receiver\'s Username:</string>
    <string name="history">history</string>
    <string name="send">send</string>

    <string name="btnLogoutLabel">Logout</string>

    <string name="item_name">Username</string>
    <string name="item_description">Description</string>
    <string name="description">This image acts as an icon.</string>

    <string name="itemOnLine">Online</string>
    <string name="itemOffLine">Offline</string>
    <string name="testUserList">Test Users:\n test1\n test2\n test3\n test4</string>
</resources>