<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/messageCardView"
    android:layout_margin="2dp"
    android:layout_gravity="right"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/recipientLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingEnd="15dp"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/recipientStickIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/description"
            android:padding="0dp" />

        <TextView
            android:id="@+id/recipientStickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/recipientStickIcon"
            android:text="@string/item_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/recipientTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipientStickName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/recipientStickIcon"
            android:text="@string/item_description" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/senderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="5dp">

            <TextView
                android:id="@+id/senderStickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_name"
                android:layout_toLeftOf="@id/senderStickIcon"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/senderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/senderStickName"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:layout_toLeftOf="@id/senderStickIcon"
                android:text="@string/item_description" />

        <ImageView
            android:id="@+id/senderStickIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/description"
            android:padding="0dp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>